--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -431,12 +431,12 @@
 
 }
 #proj3{
-    background-image: url(./images/projects/Project1.png);
+    background-image: url(./images/razorpay-clone.png);
 
 }
 #proj4{
     margin-left: 120px;
-    background-image: url(./images/projects/Project4.png);
+    background-image: url(./images/wheater-web.png);
 
 }
 
