--- a/Password-generator/style.css
+++ b/Password-generator/style.css
@@ -258,3 +258,68 @@ background-color: var(--vb-violet2);
   opacity: 1;
    transform: scale(1);
   }
+
+  /* modal */
+  .modal{
+    position: fixed;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    border: 2px solid #ffffff59;
+    width: 500px;
+    scale: 0;
+    background: #00000088;
+    backdrop-filter: blur(10px);
+    color: white;
+    z-index: 100;
+    padding: 20px 25px;
+    border-radius: 20px;
+    transition: 0.5s ease-in-out;
+  }
+  .modal-header {
+    display: flex;
+    margin-bottom: 25px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 12px;
+    border-bottom: 1px solid #ffffff88;
+  }
+  .modal-header h1{
+    font-size: 18px;
+  }
+  .icon_modal  {
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+     font-size: 25px;
+     gap: 10px;
+   }
+  .icon_modal i {
+    font-size: 30px;
+  }
+  .close {
+    cursor: pointer;
+  }
+  .active_modal{
+    scale: 1;
+  }
+  .overlay {
+    position: fixed;
+    background-color: #5f5f5f83;
+    top: 0;
+    opacity: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    pointer-events: none;
+    transition: 0.5s ease-in-out;
+  }
+  .overlayactive {
+    opacity: 1;
+    pointer-events: auto;
+  }
